<resources>
    <string name="app_name">FindMyRestaurant</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">732359323893735</string>
    <string name="fb_login_protocol_scheme">fb732359323893735</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="res_name">Name: </string>
    <string name="location">Location: </string>
    <string name="calification">Calification: </string>
    <string name="price">Price: </string>
    <string name="type">Food Type: </string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="ubicacion"><u>Abrir Ubicacion</u>.</string>
</resources>
