<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <GridLayout
        android:id="@+id/gridSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="6">

        <EditText
            android:id="@+id/txtSearchName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:ems="10"
            android:hint="Restaurant Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:ems="10"
            android:hint="radio en km"
            android:inputType="number" />

        <RatingBar
            android:id="@+id/searchCalification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="15dp" />

        <Spinner
            android:id="@+id/spinnerPrice"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_marginTop="15dp"
            android:clipToPadding="false"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinnerFoodType"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/lblSearchName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/res_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblSearchLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="40dp"
            android:text="@string/location"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblSearchPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/price"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblSearchCalification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/calification"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblSearchType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_marginTop="15dp"
            android:text="@string/type"
            android:textSize="18sp" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapViewSearch"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_row="1"
            android:layout_column="1" />

    </GridLayout>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridSearch"
        android:layout_centerHorizontal="true"
        android:onClick="btnSearch_onClick"
        android:text="Search" />


</RelativeLayout>